# Dynamic-DM

./: README.md  dynamic-dm.module.toml  prepare_plugin.py  pyproject.toml
.github/workflows/: ci.yml
dynamic_dm/: __init__.py  cli.py  dm_ast.py  patches.py
tests/: test_patches.py
